nohup.out
/usr/local/lib/python3.10/dist-packages/flask_sqlalchemy/__init__.py:833: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.
  warnings.warn(FSADeprecationWarning(
 * Serving Flask app "website" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
 * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)
 * Restarting with stat
/usr/local/lib/python3.10/dist-packages/flask_sqlalchemy/__init__.py:833: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.
  warnings.warn(FSADeprecationWarning(
 * Debugger is active!
 * Debugger PIN: 229-111-208
127.0.0.1 - - [01/Feb/2024 19:32:10] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:32:11] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:32:18] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:34:24] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:40:38] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:40:50] "[35m[1mPOST / HTTP/1.1[0m" 500 -
Traceback (most recent call last):
  File "/usr/local/lib/python3.10/dist-packages/flask/app.py", line 2464, in __call__
    return self.wsgi_app(environ, start_response)
  File "/usr/local/lib/python3.10/dist-packages/flask/app.py", line 2450, in wsgi_app
    response = self.handle_exception(e)
  File "/usr/local/lib/python3.10/dist-packages/flask/app.py", line 1867, in handle_exception
    reraise(exc_type, exc_value, tb)
  File "/usr/local/lib/python3.10/dist-packages/flask/_compat.py", line 39, in reraise
    raise value
  File "/usr/local/lib/python3.10/dist-packages/flask/app.py", line 2447, in wsgi_app
    response = self.full_dispatch_request()
  File "/usr/local/lib/python3.10/dist-packages/flask/app.py", line 1952, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "/usr/local/lib/python3.10/dist-packages/flask/app.py", line 1821, in handle_user_exception
    reraise(exc_type, exc_value, tb)
  File "/usr/local/lib/python3.10/dist-packages/flask/_compat.py", line 39, in reraise
    raise value
  File "/usr/local/lib/python3.10/dist-packages/flask/app.py", line 1950, in full_dispatch_request
    rv = self.dispatch_request()
  File "/usr/local/lib/python3.10/dist-packages/flask/app.py", line 1936, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "/usr/local/lib/python3.10/dist-packages/flask_login/utils.py", line 272, in decorated_view
    return func(*args, **kwargs)
  File "/mnt/c/Users/92892/Desktop/venv_flask_note/Flask-Web-App-Tutorial/website/views.py", line 16, in home
    if len(note) < 1:
TypeError: object of type 'NoneType' has no len()
127.0.0.1 - - [01/Feb/2024 19:40:50] "[37mGET /?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:40:50] "[37mGET /?__debugger__=yes&cmd=resource&f=jquery.js HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:40:50] "[37mGET /?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:40:50] "[37mGET /?__debugger__=yes&cmd=resource&f=ubuntu.ttf HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:40:50] "[37mGET /?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:40:50] "[37mGET /?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1[0m" 200 -
127.0.0.1 - - [01/Feb/2024 19:41:20] "[37mGET / HTTP/1.1[0m" 200 -
 * Detected change in '/mnt/c/Users/92892/Desktop/venv_flask_note/Flask-Web-App-Tutorial/website/views.py', reloading
 * Restarting with stat
/usr/local/lib/python3.10/dist-packages/flask_sqlalchemy/__init__.py:833: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.
  warnings.warn(FSADeprecationWarning(
Traceback (most recent call last):
  File "/mnt/c/Users/92892/Desktop/venv_flask_note/Flask-Web-App-Tutorial/main.py", line 3, in <module>
    app = create_app()
  File "/mnt/c/Users/92892/Desktop/venv_flask_note/Flask-Web-App-Tutorial/website/__init__.py", line 16, in create_app
    from .views import views
  File "/mnt/c/Users/92892/Desktop/venv_flask_note/Flask-Web-App-Tutorial/website/views.py", line 14
    note = request.form.get('re'su')#Gets the note from the HTML 
                                  ^
SyntaxError: unterminated string literal (detected at line 14)
